ui: fix facet spacing

--- a/invenio_app_rdm/theme/assets/semantic-ui/less/invenio_app_rdm/theme.less
+++ b/invenio_app_rdm/theme/assets/semantic-ui/less/invenio_app_rdm/theme.less
@@ -10,6 +10,7 @@
 @import "footer.less";
 @import "frontpage.less";
 @import "deposit.less";
+@import "search.less";
 
 html,
 body {
@@ -301,7 +302,7 @@ body {
     padding-left: 21px !important;
 }
 
-.facet-title{
+.facet-subtitle{
   padding-left: 20px !important;
 }
 
